crates/orator-axum-build/tests/snapshots/codegen_axum__module_build_rs_entry.snap
---
source: crates/orator-axum/tests/codegen_axum.rs
expression: module.build_rs_entry()
---
#[allow(dead_code)]
mod types {
    include!(concat!(env!("OUT_DIR"), "/api/types.rs"));
}

#[allow(dead_code)]
mod operations {
    use super::types::*;
    include!(concat!(env!("OUT_DIR"), "/api/operations.rs"));
}

#[allow(dead_code)]
mod handlers {
    use super::types::*;
    use super::operations::*;
    include!(concat!(env!("OUT_DIR"), "/api/handlers.rs"));
}

pub use types::*;
pub use operations::*;
pub use handlers::*;
