crates/orator-axum-build/tests/snapshots/codegen_axum__module_mod_file.snap
---
source: crates/orator-axum/tests/codegen_axum.rs
expression: module.mod_file()
---
#[allow(dead_code)]
mod types;
#[allow(dead_code)]
mod operations;
#[allow(dead_code)]
mod handlers;

pub use types::*;
pub use operations::*;
pub use handlers::*;
